# proxy_cache_aws

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  grafana_graph.json  prometheus.yml  proxy_cache_aws.code-workspace  proxy_cache_aws_grafana_storage.tar.zst  test-output
.github/: pull_request_template.md
.github/workflows/: docker_build_on_pr.yml  push_to_docker.yml  rust.yml  unit_testing_on_pr.yml
a_test/: 0-46.manifest
docs/: pull_request_template.md
src/: main.rs  s3.rs  temp.rs
src/facades/: archivist.rs  compression.rs  deprecated_efs_facade.rs  efs_facade.rs  local_cache.rs  mod.rs  postgres_facade.rs  s3.rs  s3_README.md
src/handlers/: collections.rs  general.rs  metrics.rs  mod.rs
src/middlewares/: tracing.rs
test-directory/archive-test-write/: archive-test-write  archive-test-write.manifest
test-directory/archive-test-write-2/: archive-test-write-2.manifest
test/Postgres/: CacheOffsetTable.sql  Dockerfile
test/collections_testing/test_files/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
