[package]
name = "proxy_cache_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#MAKE SURE TO LOOK AT LICENSE (MIT prefered)
[dependencies]
axum = "0.6.18"
tokio = { version = "1.0", features = ["full"] }
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
tempfile = "3.6.0"
rusoto_credential = "0.46.0"
dotenv = "0.15.0"


[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]