[package]
name = "proxy_cache_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#MAKE SURE TO LOOK AT LICENSE (MIT prefered)
[dependencies]
axum = "0.6.18"
deadpool-postgres = "0.10.5"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2" 
opentelemetry-jaeger = "0.16.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}
tracing = "0.1.37"
